--- a/web/index.html
+++ b/web/index.html
@@ -6,20 +6,44 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="author" content="Steven Rémot" />
     <script type='text/javascript' src='the.js'></script>
+    <style>
+      .screen {
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        display: none;
+        align-items: center;
+        justify-content: center;
+        z-index: 1;
+
+        opacity: 0.5;
+      }
+
+      .screen.visible {
+        display: flex;
+      }
+
+      .screen p {
+        color: white;
+        font-family: Helvetica;
+        font-size: 3rem;
+      }
+
+      #success-screen {
+        background-color: green;
+      }
+
+      #failure-screen {
+        background-color: red;
+      }
+    </style>
   </head>
 
   <body>
-  <!-- EXAMPLE APP START -->
-  <p>This is a sample app. It contains some
-  <a href="parts.html">batteries included</a>
-  and should be
-  <a href="uninstall.html">cleaned up</a>
-  once you start developing your own  app / lib.</p>
-  <button id="amber-with">Hello from TagBrush >> with:</button>
-  <button id="silk-tag">Hello from Silk >> TAG:</button>
-  <button id="jquery-append">Hello from jQuery append</button>
-  <ol id="output-list"></ol>
-  <!-- EXAMPLE APP END -->
+  <div id="success-screen" class="screen"><p>You won</p></div>
+  <div id="failure-screen" class="screen"><p>You lost</p></div>
   <script type='text/javascript'>
       require(['app'], function (amber) {
           amber.initialize({
